--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Intro to Media Queries</title>
+  <title>Phrasal Template Generator</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="handheldfriendly" content="true">
   <meta name="mobileoptimized" content="240">
@@ -11,6 +11,6 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-
+  <script src="js/main.js"></script>
 </body>
 </html>
